--- a/external/style/newsAndEvents.less
+++ b/external/style/newsAndEvents.less
@@ -18,8 +18,7 @@
 
 #newsModal .modal-content .close,
 #eventModal .modal-content .close {
-	//color: #ff461e;
-	color: #ff461e;
+	color: @close-hover;
 	margin-top: 0.5em;
 	margin-right: 0.5em;
 	font-size: 1.6em !important;
