--- a/external/style/profile.less
+++ b/external/style/profile.less
@@ -14,3 +14,7 @@
 .dropdown-menu .active a {
 	background: @nav-hover-bg;
 }
+// Fixes overflow of dropdown
+.history-controls .right-control {
+	width: auto;
+}
